# RemoteConsole_project

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt
Client/Headers/: UtilFuncs.h  client.h
Client/Sources/: UtilFuncs.cpp  client.cpp  main.cpp
Server/: CMakeLists.txt
Server/Include/: Services.h  server.h
Server/Sources/: main.cpp
Tools/: CMakeLists.txt  README.txt
Tools/Include/: CommonFunc.h  IpValidator.h  LocalAddrValidator.h  ValidatorBaseClass.h
Tools/Sources/: CommonFunc.cpp  IpValidator.cpp  LocalAddrValidator.cpp
proto/: RemoteConsole.grpc.pb.cc  RemoteConsole.grpc.pb.h  RemoteConsole.pb.cc  RemoteConsole.pb.h  RemoteConsole.proto
